# mealgen

./: .slopchopignore  Cargo.toml  Dioxus.toml  SEMMAP.md  index.html  slopchop-report.txt
.slopchop/: events.jsonl
docs/: spec.md
public/assets/css/: animations.css  base.css  components.css  main.css  mobile-slots.css  slots.css  variables.css
src/: main.rs
src/components/layout/: mod.rs
src/components/pages/: generator_logic.rs  home.rs  icons.rs  meal_generator.rs  meal_slot.rs  meal_types.rs  mod.rs  sections.rs
src/content/: meal_data.rs  mod.rs
